simple-app/server/server-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: server
  namespace: simple-app
  labels:
    app: server
    app.kubernetes.io/name: server
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: server
    app.kubernetes.io/part-of: product-catalog
    endpoint: server
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: server
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
